* Edit custom.css : Remove tags background color and fix word-wrap

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -92,8 +92,8 @@ a {
  */
 a.tags-link{
   color: #717171;
-  background-color: #f9f9f9;
   padding: 0 0.5em;
+  display: inline-block;
 }
 
 /* 
